--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ install:
   
 script:
   - ./linux quiet mem=2G rootfstype=hostfs rw eth0=slirp,,/usr/bin/slirp-fullbolt init=$(pwd)/uml.sh WORKDIR=$(pwd) HOME=$HOME
+  - cat result
